# python3-crlx

./: .gitignore  LICENSE  README.md  pyproject.toml  regex_scratch.ipynb  requirements.txt
__scratch__/: pco2_lookup.ipynb  pco2_parse.ipynb  scratch.ipynb  wind_scratch.ipynb
crlx/: core.py  processing.py  qartod.py  sikuliaq.py
examples/: sst_example.ipynb
scratch/: scratch.ipynb
scripts/: collect_pco2_ldeo_hourly.py  collect_sbe38_hourly.py  collect_sbe45_hourly.py  collect_wind.py  combine_sbe38_daily.py  combine_sbe45_daily.py  combine_wind_daily.py  install_python3-crlx.sh
scripts/sikuliaq/plots/: plot_winds.py
